; ModuleID = '/home/carl/AnghaBench/RetroArch/tasks/extr_task_patch.c_ups_patch_read.c'
source_filename = "/home/carl/AnghaBench/RetroArch/tasks/extr_task_patch.c_ups_patch_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ups_data = type { i64, i64, i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ups_data*)* @ups_patch_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ups_patch_read(%struct.ups_data* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ups_data*, align 8
  %4 = alloca i32, align 4
  store %struct.ups_data* %0, %struct.ups_data** %3, align 8
  %5 = load %struct.ups_data*, %struct.ups_data** %3, align 8
  %6 = icmp ne %struct.ups_data* %5, null
  br i1 %6, label %7, label %34

7:                                                ; preds = %1
  %8 = load %struct.ups_data*, %struct.ups_data** %3, align 8
  %9 = getelementptr inbounds %struct.ups_data, %struct.ups_data* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load %struct.ups_data*, %struct.ups_data** %3, align 8
  %12 = getelementptr inbounds %struct.ups_data, %struct.ups_data* %11, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  %14 = icmp slt i64 %10, %13
  br i1 %14, label %15, label %34

15:                                               ; preds = %7
  %16 = load %struct.ups_data*, %struct.ups_data** %3, align 8
  %17 = getelementptr inbounds %struct.ups_data, %struct.ups_data* %16, i32 0, i32 2
  %18 = load i32*, i32** %17, align 8
  %19 = load %struct.ups_data*, %struct.ups_data** %3, align 8
  %20 = getelementptr inbounds %struct.ups_data, %struct.ups_data* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = add nsw i64 %21, 1
  store i64 %22, i64* %20, align 8
  %23 = getelementptr inbounds i32, i32* %18, i64 %21
  %24 = load i32, i32* %23, align 4
  store i32 %24, i32* %4, align 4
  %25 = load %struct.ups_data*, %struct.ups_data** %3, align 8
  %26 = getelementptr inbounds %struct.ups_data, %struct.ups_data* %25, i32 0, i32 3
  %27 = load i32, i32* %26, align 8
  %28 = xor i32 %27, -1
  %29 = call i32 @encoding_crc32(i32 %28, i32* %4, i32 1)
  %30 = xor i32 %29, -1
  %31 = load %struct.ups_data*, %struct.ups_data** %3, align 8
  %32 = getelementptr inbounds %struct.ups_data, %struct.ups_data* %31, i32 0, i32 3
  store i32 %30, i32* %32, align 8
  %33 = load i32, i32* %4, align 4
  store i32 %33, i32* %2, align 4
  br label %35

34:                                               ; preds = %7, %1
  store i32 0, i32* %2, align 4
  br label %35

35:                                               ; preds = %34, %15
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i32 @encoding_crc32(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
